--- a/locales/it/messages.json
+++ b/locales/it/messages.json
@@ -22,6 +22,9 @@
     "menu_settings": {
         "message": "Impostazioni assistente"
     },
+    "menu_wot_reputation_indicator": {
+        "message": "Indicatore reputazione sito"
+    },
     "assistant_select_element": {
         "message": "Bloccaggio elemento"
     },
@@ -39,6 +42,12 @@
     },
     "assistant_slider_explain": {
         "message": "Muovi la barra per cambiare la grandezza del frame da per il quale la nuova regola funzionerà:"
+    },
+    "assistant_slider_min": {
+        "message": "MIN"
+    },
+    "assistant_slider_max": {
+        "message": "MAX"
     },
     "assistant_extended_settings": {
         "message": "Impostazioni avanzate"
