--- a/locales/uk/messages.json
+++ b/locales/uk/messages.json
@@ -22,6 +22,12 @@
     "menu_settings": {
         "message": "Налаштування помічника"
     },
+    "menu_wot_reputation_indicator": {
+        "message": "Індикатор репутації сайту"
+    },
+    "menu_wot_reputation_confidence_level": {
+        "message": "Рівень надійності репутації"
+    },
     "assistant_select_element": {
         "message": "Блокування елементу"
     },
