--- a/locales/ru/messages.json
+++ b/locales/ru/messages.json
@@ -77,7 +77,7 @@
         "message": "Настройка помощника"
     },
     "assistant_preview_header": {
-        "message": "Блокировка элемента - предпросмотр"
+        "message": "Блокировка элемента – предпросмотр"
     },
     "assistant_preview_header_info": {
         "message": "Убедитесь, что элемент заблокирован как задумано"
