--- a/locales/de/messages.meta.json
+++ b/locales/de/messages.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "AdGuard-Assistent",
-            "description": "Bietet einen einfachen und nützlichen Weg die Filterung direkt im Browser zu verwalten"
+            "description": "Bietet eine einfache und bequeme Möglichkeit, das Filtern direkt im Browser zu verwalten"
         }
     }
 }
