--- a/locales/es/messages.json
+++ b/locales/es/messages.json
@@ -74,7 +74,7 @@
         "message": "Bloquear"
     },
     "assistant_settings": {
-        "message": "Configuración de asistente"
+        "message": "Configuración del asistente"
     },
     "assistant_preview_header": {
         "message": "Bloqueo de elementos - vista previa"
