--- a/locales/de/messages.json
+++ b/locales/de/messages.json
@@ -3,24 +3,24 @@
     "settings_position_save_all": "Alle Webseiten",
     "settings_position_save_this": "Diese Webseite",
     "assistant_select_element_start": "Starten",
-    "assistant_select_element_text": "Wählen Sie ein zu blockierendes Element auf der Seite aus. Laden Sie die Seite neu, um den Blockiermodus zu verlassen.",
+    "assistant_select_element_text": "Wählen Sie ein zu sperrenden Element auf der Seite aus. Laden Sie die Seite neu, um den Sperrmodus zu verlassen.",
     "menu_filtration_status": {
         "message": "Auf dieser Webseite filtern"
     },
     "menu_do_not_filter_30_sec": {
-        "message": "Für 30 Sekunden nicht blockieren"
+        "message": "Schutz für 30 Sekunden deaktivieren"
     },
     "menu_block_ad_on_site": {
-        "message": "Werbung auf dieser Seite blockieren"
+        "message": "Zu sperrendes Element dieser Webseite auswählen"
     },
     "menu_report_abuse": {
         "message": "Diese Webseite melden"
     },
     "menu_site_report": {
-        "message": "Webseiten-Sicherheitsbericht"
+        "message": "Sicherheitsbericht dieser Webseite abrufen"
     },
     "menu_settings": {
-        "message": "Assistenten-Einstellungen"
+        "message": "Assistent-Einstellungen"
     },
     "menu_wot_reputation_indicator": {
         "message": "Website-Reputations-Indikator"
@@ -29,19 +29,19 @@
         "message": "Reputationsvertrauensgrad"
     },
     "assistant_select_element": {
-        "message": "Element-Blockierung"
+        "message": "Element sperren"
     },
     "assistant_select_element_ext": {
-        "message": "Wählen Sie ein zu blockierendes Element auf der Seite aus"
+        "message": "Wählen Sie ein zu sperrendes Element auf der Seite aus"
     },
     "assistant_select_element_cancel": {
         "message": "Abbrechen"
     },
     "assistant_block_element": {
-        "message": "Element-Blockierung"
+        "message": "Element sperren"
     },
     "assistant_block_element_explain": {
-        "message": "Anpassen der Regel der Element-Blockierung"
+        "message": "Regel zum Sperren von Elementen anpassen"
     },
     "assistant_slider_explain": {
         "message": "Bewegen Sie den Schieberegler, um die Ausmaßgröße der neuen Regeln zu ändern:"
@@ -59,10 +59,10 @@
         "message": "Regel auf alle Webseiten anwenden"
     },
     "assistant_block_by_reference": {
-        "message": "Durch Referenzlink blockieren"
+        "message": "Durch Referenzlink sperren"
     },
     "assistant_block_similar": {
-        "message": "Ähnliche Elemente blockieren"
+        "message": "Ähnliche Elemente sperren"
     },
     "assistant_another_element": {
         "message": "Ein anderes Element wählen"
@@ -71,13 +71,13 @@
         "message": "Vorschau"
     },
     "assistant_block": {
-        "message": "Blockieren"
+        "message": "Sperren"
     },
     "assistant_settings": {
-        "message": "Assistenten-Einstellungen"
+        "message": "Assistent-Einstellungen"
     },
     "assistant_preview_header": {
-        "message": "Element-Blockierung - Vorschau"
+        "message": "Vorschau der zu sperrenden Elemente"
     },
     "assistant_preview_header_info": {
         "message": "Prüfen Sie, ob das Element blockiert ist"
@@ -104,7 +104,7 @@
         "message": "Diese Webseite hat einen exzellenten Ruf laut $1"
     },
     "settings_choose_size_and_position": {
-        "message": "Anpassen der Größe und Position des AdGuard-Assistenten"
+        "message": "Anpassen der Größe und Position des AdGuard-Assistent"
     },
     "settings_icon_size": {
         "message": "Symbol-Größe:"
