--- a/locales/da/messages.meta.json
+++ b/locales/da/messages.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "AdGuard Assistent",
-            "description": "Sørger for en nem og behagelig måde til at administrere filtrering lige fra browseren"
+            "description": "Muliggør nem og bekvem filtreringshåndtering direkte fra browseren"
         }
     }
 }
