--- a/locales/tr/messages.meta.json
+++ b/locales/tr/messages.meta.json
@@ -1,7 +1,7 @@
 {
     "extension": {
         "assistant": {
-            "name": "AdGuard Assistant eklentisi",
+            "name": "AdGuard Asistanı",
             "description": "Filtrelemeyi, tarayıcıdan doğrudan kolayca yönetmenizi sağlar."
         }
     }
