--- a/locales/da/messages.json
+++ b/locales/da/messages.json
@@ -1,62 +1,62 @@
 {
-    "settings_position_save": "Hjemmesider",
-    "settings_position_save_all": "Alle hjemmesider",
-    "settings_position_save_this": "Denne hjemmeside",
+    "settings_position_save": "Websteder",
+    "settings_position_save_all": "Alle websteder",
+    "settings_position_save_this": "Dette websted",
     "assistant_select_element_start": "Start",
-    "assistant_select_element_text": "Vælg et element på denne side som skal blokeres. Opdater siden for at annullere tilstanden for elementblokering.",
+    "assistant_select_element_text": "Vælg et element på denne side, der skal blokeres. Opfrisk siden for at afbryde elementblokeringstilstanden.",
     "menu_filtration_status": {
-        "message": "Filtrering på denne hjemmeside"
+        "message": "Filtrering på dette websted"
     },
     "menu_do_not_filter_30_sec": {
-        "message": "Filtrer ikke i 30 sekunder"
+        "message": "Filtrér ikke i 30 sekunder"
     },
     "menu_block_ad_on_site": {
-        "message": "Bloker annoncer på denne hjemmeside"
+        "message": "Blokér annoncer på dette websted"
     },
     "menu_report_abuse": {
-        "message": "Rapporter denne hjemmeside"
+        "message": "Anmeld dette websted"
     },
     "menu_site_report": {
-        "message": "Sikkerhedsrapport for hjemmesiden"
+        "message": "Webstedssikkerhedsrapport"
     },
     "menu_settings": {
-        "message": "Assistent indstillinger"
+        "message": "Assistent-indstillinger"
     },
     "menu_wot_reputation_indicator": {
-        "message": "Indikator for hjemmesidens omdømme"
+        "message": "Webstedsomdømmeindikator"
     },
     "menu_wot_reputation_confidence_level": {
-        "message": "Omdømmets tillidsniveau"
+        "message": "Omdømmetillidsniveau"
     },
     "assistant_select_element": {
-        "message": "Element blokering"
+        "message": "Elementblokering"
     },
     "assistant_select_element_ext": {
-        "message": "Vælg et element på denne side som skal blokeres"
+        "message": "Vælg et element på siden, der skal blokeres"
     },
     "assistant_select_element_cancel": {
-        "message": "Annuller"
+        "message": "Afbryd"
     },
     "assistant_block_element": {
-        "message": "Element blokering"
+        "message": "Elementblokering"
     },
     "assistant_block_element_explain": {
-        "message": "Juster regel for element blokering"
+        "message": "Justér regel for elementblokering"
     },
     "assistant_slider_explain": {
-        "message": "Flyt skyderen for at ændre størrelsen af den ramme, den nye regel vil fungere efter:"
+        "message": "Flyt skyderen for at ændre størrelsen på den ramme, den nye regel vil fungere for:"
     },
     "assistant_extended_settings": {
         "message": "Avancerede indstillinger"
     },
     "assistant_apply_rule_to_all_sites": {
-        "message": "Anvend reglen på alle hjemmesider"
+        "message": "Anvend reglen på alle websteder"
     },
     "assistant_block_by_reference": {
-        "message": "Bloker ved reference link"
+        "message": "Blokér efter referencelink"
     },
     "assistant_block_similar": {
-        "message": "Bloker lignende"
+        "message": "Blokér lignende"
     },
     "assistant_another_element": {
         "message": "Vælg et andet element"
@@ -65,40 +65,40 @@
         "message": "Forhåndsvisning"
     },
     "assistant_block": {
-        "message": "Bloker"
+        "message": "Blokér"
     },
     "assistant_settings": {
-        "message": "Assistent indstillinger"
+        "message": "Assistent-indstillinger"
     },
     "assistant_preview_header": {
-        "message": "Element blokering - forhåndsvisning"
+        "message": "Elementblokering - forhåndsvisning"
     },
     "assistant_preview_header_info": {
         "message": "Sørg for, at elementet er blokeret som tilsigtet"
     },
     "assistant_preview_end": {
-        "message": "Exit forhåndsvisning"
+        "message": "Afslut forhåndsvisning"
     },
     "wot_unknown_description": {
-        "message": "Hjemmesidens omdømme er ikke defineret af $1"
+        "message": "Dette websteds omdømme er ikke defineret af $1"
     },
     "wot_bad_description": {
-        "message": "Denne hjemmeside har et meget dårligt omdømme ifølge $1"
+        "message": "Dette websted har et meget dårligt omdømme jf. $1"
     },
     "wot_poor_description": {
-        "message": "Denne hjemmeside har et dårligt omdømme ifølge $1"
+        "message": "Dette websted har et dårligt omdømme jf. $1"
     },
     "wot_unsatisfactory_description": {
-        "message": "Denne hjemmeside har et dårligt omdømme ifølge $1"
+        "message": "Dette websted har et ringe omdømme jf. $1"
     },
     "wot_good_description": {
-        "message": "Denne hjemmeside har et godt omdømme ifølge $1"
+        "message": "Dette websted har et godt omdømme jf. $1"
     },
     "wot_excellent_description": {
-        "message": "Denne hjemmeside har et fremragende omdømme \nifølge $1"
+        "message": "Dette websted har et fremragende omdømme \njf. $1"
     },
     "settings_choose_size_and_position": {
-        "message": "Juster AdGuard Assistent størrelse og position"
+        "message": "Justér størrelse og position for AdGuard Assistent"
     },
     "settings_icon_size": {
         "message": "Ikonstørrelse:"
@@ -125,7 +125,7 @@
         "message": "Nederst til højre"
     },
     "settings_cancel": {
-        "message": "Annuller"
+        "message": "Afbryd"
     },
     "settings_save": {
         "message": "Gem ændringer"
