--- a/locales/uk/messages.meta.json
+++ b/locales/uk/messages.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "Помічник AdGuard",
-            "description": "Забезпечує легкий і зручний спосіб керування фільтрацією прямо з веб-переглядача"
+            "description": "Забезпечує легкий і зручний спосіб керування фільтруванням прямо з браузера"
         }
     }
 }
